--- a/angular.json
+++ b/angular.json
@@ -90,7 +90,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.css"
+              "styles.scss",
+              "node_modules/ngx-toastr/toastr.css"
             ],
             "scripts": []
           }
